--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -330,6 +330,8 @@
     <Compile Include="Assets\Framework\Runtime\Core\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectAddStatusComponent.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\Character\Component\AABBComponent.cs" />
+    <Compile Include="Assets\Framework\Runtime\Core\Math\OBB.cs" />
+    <Compile Include="Assets\Framework\Runtime\Core\Math\OBBTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Framework\Unity.Model.asmdef" />
