移除老的滑动列表

--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -70,7 +70,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ResolutionType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Pool\APool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
@@ -130,8 +129,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScrollItem.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScrollItemPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
@@ -893,6 +890,10 @@
     <ProjectReference Include="LoopScrollRect.Runtime.csproj">
       <Project>{E9505C4B-2DF9-C2B3-F3E2-ECB7DF3B049E}</Project>
       <Name>LoopScrollRect.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="EnhancedScroller_asmdef.csproj">
+      <Project>{50A4DDDC-1012-D6CA-5D95-34EC1C8959A2}</Project>
+      <Name>EnhancedScroller_asmdef</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
