--- a/Assets/Framework/Unity.Model.asmdef
+++ b/Assets/Framework/Unity.Model.asmdef
@@ -7,7 +7,8 @@
         "GUID:89fdb54e773827b40b9127329bdaed75",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:174b432621f01fb418be26ffc6c90e22",
-        "GUID:e34a5702dd353724aa315fb8011f08c3"
+        "GUID:e34a5702dd353724aa315fb8011f08c3",
+        "GUID:02c11f442ffc148a9b44d2aa0618ec34"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
