--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -93,8 +93,8 @@
     <Compile Include="Assets\Framework\Util\LocalDialog.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Manager\UpdateManager\FsmNode\FsmInitialize.cs" />
     <Compile Include="Assets\Framework\Runtime\Util\Protobuf\ProtobufUtil.cs" />
-    <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\AbilityEffect\AbilityEffect.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Module\MainThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
+    <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\AbilityEffect\AbilityEffect.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\AbilityItem\Component\AbilityItemTargetCounterComponent.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Manager\RedDot\RedDotManager.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\RVO\Obstacle.cs" />
@@ -287,8 +287,8 @@
     <Compile Include="Assets\Framework\Runtime\Core\Module\Event\EventType.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Module\EventSystem\EventSystem.cs" />
     <Compile Include="Assets\Framework\Runtime\Util\Path\PathUtil.cs" />
-    <Compile Include="Assets\Framework\Runtime\Core\Manager\UpdateManager\FsmNode\FsmCreateDownloader.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\Character\Component\FSMComponet\StateTransition\Attack2WalkState.cs" />
+    <Compile Include="Assets\Framework\Runtime\Core\Manager\UpdateManager\FsmNode\FsmCreateDownloader.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\Manager\CombatScript\CombatScript.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Manager\RedDot\RedDot.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Manager\UpdateManager\FsmNode\FsmUpdateManifest.cs" />
@@ -1078,6 +1078,10 @@
     <ProjectReference Include="LoopScrollRect.Runtime.csproj">
       <Project>{E9505C4B-2DF9-C2B3-F3E2-ECB7DF3B049E}</Project>
       <Name>LoopScrollRect.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="EnhancedScroller_asmdef.csproj">
+      <Project>{50A4DDDC-1012-D6CA-5D95-34EC1C8959A2}</Project>
+      <Name>EnhancedScroller_asmdef</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
